--- a/package.json
+++ b/package.json
@@ -23,10 +23,17 @@
     "test": "npm run compile && node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6",
-    "tslint": "^5.8.0",
+    "@types/fs-extra": "^5.0.3",
+    "@types/lodash": "^4.14.110",
+    "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
-    "@types/mocha": "^2.2.42"
+    "fs-extra": "^6.0.1",
+    "lodash": "^4.17.10",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.1",
+    "vscode": "^1.1.6"
+  },
+  "dependencies": {
+    "@types/lodash-es": "^4.17.0"
   }
 }
