--- a/package.json
+++ b/package.json
@@ -15,6 +15,26 @@
     "onLanguage:erb"
   ],
   "main": "./out/extension",
+  "contributes": {
+    "configuration": {
+      "type": "object",
+      "title": "Rails Partial Configuration",
+      "properties": {
+        "railsPartial.viewFileExtensions": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "default": [
+            "html.haml",
+            "html.slim",
+            "html.erb"
+          ],
+          "description": "This is the extension of the view files."
+        }
+      }
+    }
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
@@ -23,7 +43,7 @@
     "test": "npm run compile && node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "@types/fs-extra": "^5.0.3",
+    "@types/fs-extra": "5.0.2",
     "@types/lodash": "^4.14.110",
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
@@ -33,7 +53,5 @@
     "typescript": "^2.6.1",
     "vscode": "^1.1.6"
   },
-  "dependencies": {
-    "@types/lodash-es": "^4.17.0"
-  }
+  "dependencies": {}
 }
