--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "@types/lodash": "^4.14.110",
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
-    "fs-extra": "^6.0.1",
-    "lodash": "^4.17.10",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
     "vscode": "^1.1.6"
+  },
+  "dependencies": {
+    "fs-extra": "^6.0.1",
+    "lodash": "^4.17.10"
   }
 }
