--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "publisher": "aki77",
   "icon": "images/icon.png",
   "engines": {
-    "vscode": "^1.24.0"
+    "vscode": "^1.25.0"
   },
   "categories": [
     "Other"
@@ -53,15 +53,13 @@
   },
   "devDependencies": {
     "@types/fs-extra": "5.0.2",
-    "@types/lodash": "^4.14.110",
     "@types/mocha": "^2.2.42",
-    "@types/node": "^7.0.43",
+    "@types/node": "^7.0.67",
     "tslint": "^5.8.0",
     "typescript": "^2.6.1",
     "vscode": "^1.1.6"
   },
   "dependencies": {
-    "fs-extra": "^6.0.1",
-    "lodash": "^4.17.10"
+    "fs-extra": "^6.0.1"
   }
 }
