--- a/package.json
+++ b/package.json
@@ -48,18 +48,19 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "pretest": "npm run compile",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/fs-extra": "5.0.2",
-    "@types/mocha": "^2.2.42",
-    "@types/node": "^7.0.67",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.6"
+    "@types/fs-extra": "^8.0.0",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^10.12.21",
+    "@types/vscode": "^1.36.0",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.1",
+    "vscode-test": "^1.0.2"
   },
   "dependencies": {
-    "fs-extra": "^6.0.1"
+    "fs-extra": "^8.1.0"
   }
 }
