--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/fs-extra": "^8.0.0",
     "@types/mocha": "^5.2.7",
     "@types/node": "^10.12.21",
     "@types/vscode": "^1.36.0",
@@ -61,7 +60,5 @@
     "typescript": "^3.3.1",
     "vscode-test": "^1.0.2"
   },
-  "dependencies": {
-    "fs-extra": "^8.1.0"
-  }
+  "dependencies": {}
 }
