--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.14.9",
     "@types/vscode": "^1.36.0",
-    "tslint": "^6.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "eslint": "^8.23.0",
     "typescript": "^4.3.5",
     "vscode-test": "^1.0.2"
   },
