--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^14.14.9",
+    "@types/mocha": "^10.0.2",
+    "@types/node": "16.x",
     "@types/vscode": "^1.36.0",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.23.0",
-    "typescript": "^4.3.5",
+    "typescript": "^5.2.2",
     "vscode-test": "^1.0.2"
   },
   "dependencies": {}
