--- a/package.json
+++ b/package.json
@@ -48,12 +48,9 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile",
-    "test": "node ./out/test/runTest.js"
+    "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
-    "@types/mocha": "^10.0.2",
     "@types/node": "16.x",
     "@types/vscode": "^1.36.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
